# python-embedded-example-project

./: CMakeLists.txt  README.md  build_linux.bash  rebuild.bash
src/: main.cpp
